Fix donation widget line-height on mobile

--- a/front/style/_donation.scss
+++ b/front/style/_donation.scss
@@ -101,7 +101,11 @@
         }
 
         h2 {
-            line-height: 41px;
+            line-height: 1.7em;
+
+            @media (max-width: $mobile) {
+                line-height: 1.2em;
+            }
         }
     }
 
